first version of system model construction